feat: added routing on the drop-down links and hover effect on the StatsCardCaraousal

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,9 @@
   white-space: nowrap;
   position: relative;
 }
+
+@layer utilities {
+  .pause-animation {
+    animation-play-state: paused;
+  }
+}
